Refine anki_new_card_reps